--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,8 @@
         <TextView
             android:id="@+id/imagepath"
             android:layout_width="0dp"
+            android:linksClickable="true"
+            android:text="@string/google"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
     </LinearLayout>
